--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Choose your One Source Service Plan</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	</head>
-	<body>
+	<body style="background-color: #fafafa">
    
 		<div class="container-fluid text-center">
 			<div class="row align-items-center">
@@ -14,6 +14,7 @@
 					<img src="onesource-light-background-noscience.svg" width="300px" />
 					<p>&nbsp;</p>
 					<h2>Choose Your Service Plan</h2>
+					<p>&nbsp;</p>
 				</div>
 			</div>
 			<div class="row">
@@ -22,7 +23,7 @@
 				</stripe-pricing-table>
 			</div>
 			<div class="row">
-				<p>All plan members enjoy priority on-site support, proactive maintenance via a thorough evaluation of your entire system at least twice a year, and the help of our dedicated, highly trained technical experts. All on-site support visits (excluding inspections) incur a dispatch fee noted above, and once we have thoroughly diagnosed the issue you called us about, we will present a Summary of Findings with an up-front price. We won’t do any work that you don’t agree to, and you will always know up-front how much you may need to pay. Our business hours are 8 AM - 5 PM Eastern Time, Monday through Friday, excluding weekends and holidays. All plans renew automatically until canceled.</p>
+				<p style="text-align: left">All plan members enjoy priority on-site support, proactive maintenance via a thorough evaluation of your entire system at least twice a year, and the help of our dedicated, highly trained technical experts. All on-site support visits (excluding inspections) incur a dispatch fee noted above, and once we have thoroughly diagnosed the issue you called us about, we will present a Summary of Findings with an up-front price. We won’t do any work that you don’t agree to, and you will always know up-front how much you may need to pay. Our business hours are 8 AM - 5 PM Eastern Time, Monday through Friday, excluding weekends and holidays. All plans renew automatically until canceled.</p>
 			</div>
 		</div>
 
