Added FAQ Accordion

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 		<link rel="icon" href="favico-96.png" sizes="any">
 		<title>Choose your One Source Service Plan</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+		<style>
+			.accordion-button {
+				background-color: #3a8eba;
+				color: white;
+
+			}
+			.accordion-button:not(.collapsed) {
+				background-color: #72C3E2;
+				color: white;
+			}
+
+		</style>
 	</head>
 	<body style="background-color: #fafafa">
    
@@ -23,8 +35,60 @@
 				<stripe-pricing-table pricing-table-id="prctbl_1OdKs0CqRF3kijHDKBpt3Uog" publishable-key="pk_test_51OdK33CqRF3kijHDs4tfi1W70ONKZgw4IscDLcMoMNDtTdgNC7Ww0z5SgOgXVGnrsaqQvxBnyaLBEuqqkqalscvs00cGjDVIOr">
 				</stripe-pricing-table>
 			</div>
-			<div class="row">
-				<p style="text-align: left">All plan members enjoy priority on-site support, proactive maintenance via a thorough evaluation of your entire system at least twice a year, and the help of our dedicated, highly trained technical experts. All on-site support visits (excluding inspections) incur a dispatch fee noted above, and once we have thoroughly diagnosed the issue you called us about, we will present a Summary of Findings with an up-front price. We won’t do any work that you don’t agree to, and you will always know up-front how much you may need to pay. Our business hours are 8 AM - 5 PM Eastern Time, Monday through Friday, excluding weekends and holidays. All plans renew automatically until canceled.</p>
+			<div class="row justify-content-center">
+				<div class="col-10">
+					<p style="text-align: left">All plan members enjoy priority on-site support, proactive maintenance via a thorough evaluation of your entire system at least twice a year, and the help of our dedicated, highly trained technical experts. All on-site support visits (excluding inspections) incur a dispatch fee noted above, and once we have thoroughly diagnosed the issue you called us about, we will present a Summary of Findings with an up-front price. We won’t do any work that you don’t agree to, and you will always know up-front how much you may need to pay. Our business hours are 8 AM - 5 PM Eastern Time, Monday through Friday, excluding weekends and holidays. All plans renew automatically until canceled.</p>
+				</div>
+			</div>
+			<hr />
+			<div class="row justify-content-center">
+				<div class="col-8">
+					<p>&nbsp;</p>
+					<h3>Frequently Asked Questions</h3>
+					<p>&nbsp;</p>
+
+					<div class="accordion" id="FAQ_Accordion">
+						<div class="accordion-item">
+							<h2 class="accordion-header">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+									What are Complimentary On-Site Inspections?
+								</button>
+							</h2>
+    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+      <div class="accordion-body" style="text-align: left;">
+        <strong>Coming Soon</strong> This text will help answer this question.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+        What is Remote Support?
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+      <div class="accordion-body" style="text-align: left;">
+        <strong>Coming Soon</strong> This text will help answer this question.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+        What is Proactive Monitoring?
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+      <div class="accordion-body" style="text-align: left;">
+        <strong>Coming Soon</strong> This text will help answer this question.
+      </div>
+    </div>
+  </div>
+</div>
+
+					<p>&nbsp;</p>
+				</div>
+
 			</div>
 		</div>
 
